src/css/components/_panel.scss
.card-panel {
  width: 100%;
  height: auto;
  background-color: #FFF;
  border-radius: 1px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.30);
  .card-panel-header {
    width: 100%;
    background-color: $navbar-color;
    height: 75px;
    border-top-right-radius: 2px;
    border-top-left-radius: 2px;
    padding-left: 20px;
    padding-right: 20px;
    .card-panel-options {
      float: right;
      margin-top: -68px;
      a {
        color: #FFF;
        font-size: 14px;
        outline: 0;
        padding-left: 5px;
        padding-right: 5px;
      }
    }
    h2 {
      font-weight: 200;
      display: block;
      line-height: 75px;
      color: #FFF;
    }
    @media (max-width: 900px) {
      .card-panel-options {
        float: right;
        margin-top: -50px;
      }
      h2 {
        font-size: 20px;
        line-height: 50px;
      }
    }
    @media (max-width: 800px) {
      h2 {
         display: hidden;
      }
    }
  }
  @media (max-width: 768px) {
    .card-panel-header {
       max-height: 120px;
    }
  }
}

.card-panel-half {
  width: 50%;
  height: auto;
  background-color: #FFF;
  border-radius: 1px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.30);
  .card-panel-header {
    width: 100%;
    background-color: $navbar-color;
    height: 75px;
    border-top-right-radius: 2px;
    border-top-left-radius: 2px;
    padding-left: 20px;
    padding-right: 20px;
    .card-panel-options {
      float: right;
      margin-top: -60px;
      a {
        color: #FFF;
        font-size: 20px;
        outline: 0;
        padding-left: 5px;
        padding-right: 5px;
      }
    }
    h2 {
      font-weight: 200;
      display: block;
      line-height: 75px;
      color: #FFF;
    }
    @media (max-width: 800px) {
      .card-panel-options {
        float: right;
        margin-top: -50px;
      }
      h2 {
        font-size: 18px;
        line-height: 50px;
      }
    }
  }
  @media (max-width: 768px) {
    .card-panel-header {
      height: 50px;
    }
  }
}


.panel {
  width: 100%;
  height: 100%;
  border-color: $primary-border-color;
  background-color: $secondary-background-color;
  border-radius: 3px;
  border: none;
}
@media (max-width: 1000px) {
  .panel {
    width: 100%;
  }
}
.panel-body {
  padding: none;
  margin-left: 0;
  background-color: $secondary-background-color;
  border-color: $primary-border-color;
  border-radius: 3px;
  h4 {
    font-weight: 300;
  }
  li {
     padding: 5px;
     font-size: 15px;
 }
  .panel-setting-heading {
    font-size: 18px;
    font-weight: 300;
    letter-spacing: 0.025em;
  }
}
.panel-login-body {
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 20px;
  margin-left: 0;
  background-color: $secondary-background-color;
  border-color: $primary-border-color;
  border-radius: 3px;
  .panel-login-error {
    margin-top: 10px;
    margin-right: -15px;
    margin-left: -15px;
    padding-top: 10px;
    padding-bottom: 3px;
    background-color: #E57373;
    border-radius: 1px;
    color: #fff;
  }
}
.panel-scroll {
  @extend .panel-body;
  height: 250px;
  overflow-y: scroll;
  background-color: #FFF;
}
.panel-footer {
  background-color: #EEEEEE;
}
.panel-setting {
  padding-top: 30px;
  padding-bottom: 30px;
  padding-left: 10px;
  padding-right: 10px;
}
.panel-login {
  margin-top: 100px;
}
.panel-default {
  .panel-heading {
    text-align: left;
    font-size: 18px;
    font-weight: 300;
    letter-spacing: 0.025em;
    height: 40px;
    .panel-title {
      text-align: center;
      line-height: 20px;
    }
  }
}


.invisible-block {
  opacity: 0;
  padding-bottom: 10px;
  display: none;
}

@media (max-width: 900px) {
.invisible-block {
    display: block;
  }
}
p.stripe-fail {
   margin-top: 10px;
   background-color: #E57373;
   padding: 15px;
   border-radius: 2px;
   margin-bottom: 10px;
   color: #FFF;
   width: 100%;
   text-align: center;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.30);
   font-size: 16px;

}
.stripe-success {
   margin-top: 10px;
   background-color: #81C784;
   padding: 15px;
   border-radius: 2px;
   margin-bottom: 10px;
   color: #FFF;
   width: 100%;
   text-align: center;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.30);
   font-size: 16px;
}

